docs: add docs for patient controllers
